// Custom Keyboard Builder - ERD con: Buyer Build Flow
// Lat cat nay dung de trinh bay buyer tao build, chon linh kien va luu mod.
// Mot so bang catalog duoc lap lai de giu lien ket ro rang trong dbdiagram.
// ERD full van la Documents/Custom_Keyboard_ERD.dbml.

Table users {
  user_id int [pk, increment]
  username varchar [unique]
  is_active boolean
}

Table layouts {
  layout_id varchar [pk]
  layout_name varchar
  form_factor varchar
  standard_key_count int
}

Table cases {
  case_id varchar [pk]
  material varchar
  mount_type varchar
  price_usd float
  is_available boolean
}

Table pcbs {
  pcb_id varchar [pk]
  pcb_technology varchar
  mount_type varchar
  hotswap boolean
  wireless boolean
  rgb boolean
  switch_mount varchar
  price_usd float
  is_available boolean
}

Table plates {
  plate_id varchar [pk]
  material varchar
  mount_type varchar
  flex_cut varchar
  price_usd float
  is_available boolean
}

Table switches {
  switch_id varchar [pk]
  switch_technology varchar
  switch_type varchar
  mount_type varchar
  price_usd float
  is_available boolean
}

Table keycap_sets {
  keycap_id varchar [pk]
  profile varchar
  material varchar
  price_usd float
  is_available boolean
}

Table stabilizers {
  stab_id varchar [pk]
  stab_type varchar
  sizes_included varchar
  price_usd float
  is_available boolean
}

Table builds {
  build_id varchar [pk]
  user_id int [not null, ref: > users.user_id]
  layout_id varchar [not null, ref: > layouts.layout_id]
  case_id varchar [ref: > cases.case_id]
  pcb_id varchar [ref: > pcbs.pcb_id]
  plate_id varchar [ref: > plates.plate_id]
  switch_id varchar [ref: > switches.switch_id]
  keycap_id varchar [ref: > keycap_sets.keycap_id]
  stab_id varchar [ref: > stabilizers.stab_id]
  name varchar
  notes varchar
  status varchar
  total_cost_snapshot float
  created_at datetime
  updated_at datetime

  Note: 'Component refs are optional while the build is still draft/incomplete.'
}

Table build_mods {
  mod_id int [pk, increment]
  build_id varchar [not null, ref: > builds.build_id]
  mod_type varchar
  target_component varchar
  lube_type varchar
  is_filmed boolean
  spring_weight_g int
  notes varchar
}
